--- a/1TE19338R_喜多亮介.md
+++ b/1TE19338R_喜多亮介.md
@@ -1,3 +1,5 @@
+1TE19338R 喜多亮介
+
 ## 事前準備
 
 使用した溶液は以下である。
@@ -232,11 +234,168 @@ E = -R*(傾き)
 　= -8.314*-1.03377E-04
   = 0.000859476378 = 8.6*10^-4 J/mol 
 
+### 考察課題：
+
+BZ 反応の活性化エネルギーの内容について、リズム反応のメカニズムを踏まえて考察せよ。
+
+BZ反応の重要なプロセスはHBrO2の自己触媒的反応であり、
+
+BrO3- + HBrO2 + H+ -> 2HBrO2 + 2Fe3+
+
+ここで、HBrO2だけは自分自身が経時的に増加するため進行度が全体の反応速度に寄与していると考えると、BZ反応のリズム的な部分である振動周波数Fは、
+
+F∝k[H+][BrO3-] とできる。
+
+ここで活性化エネルギーをEとすると、
+
+k = Aexp(-E/RT) となり
+
+kの代わりに測定した振動周波数を用いてアレニウスプロットすることによりリズム反応の活性化エネルギーを求めることができる。
+
 ## 実験3 空間パターン反応
 
 ### 実験操作
 
 ![](4.png)
+
+### 課題１
+
+① なし
+
+② ターゲットパターン
+
+③ ターゲットパターン ②より綺麗
+
+④ ターゲットパターン ③より綺麗
+
+⑤ 綺麗なスパイラルパターン
+
+⑥ ターゲットパターン とてもきめ細かい
+
+1. ターゲットパターンが最も綺麗な溶液
+
+④溶液が最も綺麗だった。
+
+2. スパイラルパターンが最も綺麗な溶液
+
+⑤溶液が最も綺麗だった。
+
+進行速度は資料より、H+の濃度に比例するので硫酸が多い溶液ほどターゲットパターンが広がる速度が速くなっていると考えられる。
+
+これは実験動画を観察したとき、硫酸の量が多い溶液ほどターゲットパターンがきめ細かくなっていることを説明できる。
+
+### 課題２
+
+1. 波の伝搬速度
+
+④溶液で計測を行った。
+
+ドット間の距離が5mmであることを利用した。
+
+1:31(5mm), 2:21(10mm), 4:00(15mm)
+
+5mm/50s, 5mm/99s
+
+よって伝搬速度は 0.15mm/s であった。
+
+2. 定点における振動周波数
+
+5mm での通過点を測定した。
+
+1:37, 2:13, 2:43, 3:17, 3:54
+
+よって、
+
+(36+30+34+37)/4 = 34.3s 
+
+振動周波数は 0.0292 hz であった。
+
+### 考察課題１
+
+・リズム反応では赤と青の色変化であったのに対し、なぜパターン反応は白っぽく見えるのか。何が白く見えているのか。考察せよ。
+
+薄く広げ薄膜上にしたことで溶液の屈折率が代わり見える色が変わっている。
+
+### 考察課題２
+
+・なぜパターンの発生に銀線を用いると良いのであろうか。理由を考察せよ。
+
+銀線を入れることによりターゲットパターンを可視化することができる。これは固形物付近の界面で時間的リズムが伝播することでターゲットパターﾝを可視化することができるため。
+
+また銀イオンが析出することによりイオン性の溶液となりBr-がBrとして気化するのを防いでいる。
+
+
+## 実験 4 光感受性パターン形成 
+
+### 実験操作
+
+![](6.png)
+
+### 課題１
+
+ポジ像になる間隔を周期として測定した。
+
+①
+
+1:35, 1:46, 1:56, 2:08
+
+よって平均をとると、
+
+(11 + 10 + 12 )/3 = 11s
+
+②
+
+0:57, 1:05, 1:13, 1:21
+
+(8 + 8 + 8)/3 = 8s
+
+③
+
+0:47, 0:54, 1:00, 1:06
+
+(7 + 6 + 6)/3 = 6.3s
+
+④
+
+ポジ像になっているのはほのかに見えるが見えない時もあり測定は困難であった。（濃ゆすぎて見えなかった。）
+
+⑤
+
+④と同様に測定できなかった。（薄すぎて見えなかった。）
+
+#### 結果
+
+硫酸が少ないと濃ゆくなり、硫酸が多いと薄くなり像が見えなくなった。
+
+適切な量の硫酸を使うことで①②③のように測定可能な像が見えた。
+
+また、蒸留水が少ないほどポジ像になる周期が短くなっていった。
+
+### 課題２
+
+条件２において４種類のマスクパターンで測定をした。
+
+１．全面黒面
+
+波の発生は外側から起こっており、外側から徐々にポジ像へ移行していた。
+
+２．中央黒円
+
+黒色領域の境界から内側に向かって波が発生していることが分かった。
+
+３．中央黒グラデーション
+
+今回の場合はグラデーションが濃い内側から波が発生していたように見えた。
+
+４．全面黒グラデーション
+
+３と同様にグラデーションが濃い内側から外側に向かって波が発生していた。
+
+### 課題３
+
+黒色領域の境界部分から発生する波と外側から発生する波が衝突し、ポジ画像が出来る瞬間が存在しているように見えた。
+
+これは光照射することによってRu触媒が光を吸収し、Br-の生成速度が変化することにより黒色領域部以外の場所では波が発生しなくなることから、波が衝突する瞬間に像ができているということになる。さらにそれがリズム反応により周期的に行われるので定期的に像が現れるようになっていると考えた。
 
 
 ## 実験全体を通じた考察課題
